--- a/src/app/components/post/post.component.scss
+++ b/src/app/components/post/post.component.scss
@@ -36,25 +36,41 @@
     color: #ff3d00;
     margin-top: -5px;
   }
+}
 
-  button {
-    padding: 10px 20px;
-    font-size: 16px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    width: fit-content;
-    align-self: center;
+.comment-btns {
+  display: flex;
+  justify-content: start;
+  gap: 10px;
+}
+
+button {
+  padding: 5px 10px;
+  font-size: 12px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  width: fit-content;
+  align-self: center;
+
+  &:hover {
+    background-color: #0056b3;
+  }
+
+  &:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+  }
+
+  &.cancel-btn {
+    background-color: #dc3545;
+    border: 1px solid #ccc;
+
     &:hover {
-      background-color: #0056b3;
-    }
-
-    &:disabled {
-      background-color: #ccc;
-      cursor: not-allowed;
+      background-color: #c82333;
     }
   }
 }
