--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -21,11 +21,11 @@
       </p>
       <button
         (click)="onDeletePost(post.id)"
-        *ngIf="userName === post.authorName"
+        *ngIf="userName === post.authorName || this.userRole === 'admin'"
         class="cancel-btn"
       >
         Delete the Post
-      </button> 
+      </button>
       <div class="comments-section">
         <h3>Comments</h3>
         <div class="comment-form">
