implement pagination for posts and comments; add load more functionality and update services for paginated responses

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -119,6 +119,15 @@
         </ng-template>
       </div>
     </div>
+    <div class="pagination">
+      <button
+        *ngIf="currentPage < totalPages && !isLoading"
+        (click)="loadMorePosts()"
+        class="btn-load-more"
+      >
+        Load More Posts
+      </button>
+    </div>
   </div>
   <ng-template #noPosts>
     <p class="no-posts">No posts to display.</p>
