--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -230,6 +230,15 @@
               </div>
             </ng-template>
           </div>
+          <div class="pagination">
+            <button
+              *ngIf="currentPage < totalPages && !isCommentsLoading"
+              (click)="loadMoreComments()"
+              class="btn-load-more"
+            >
+              Load More Comments
+            </button>
+          </div>
         </div>
         <ng-template #noComments>
           <p class="no-comments">No comments yet.</p>
