add account settings component; update routing and implement email retrieval from token, add reser password functionality

--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -16,92 +16,11 @@
   <p><strong>Email:</strong> {{ userProfile.email }}</p>
   <p><strong>Role:</strong> {{ userProfile.role }}</p>
   <div class="profile-buttons">
-    <button (click)="toggleEditForm()" class="edit-btn">Edit Profile</button>
-    <button (click)="onDeleteProfile()" class="delete-btn">
-      Delete Account
+    <button (click)="profileSettings()" class="edit-btn">
+      <i class="fas fa-cogs"></i>
+      Profile Settings
     </button>
   </div>
-  <form
-    *ngIf="updateMode"
-    [formGroup]="updateProfileForm"
-    (ngSubmit)="onUpdateProfile()"
-    class="update-form"
-  >
-    <div class="form-group">
-      <div class="data">
-        <label for="firstName">First Name:</label>
-        <input
-          type="text"
-          id="firstName"
-          formControlName="firstName"
-          [ngClass]="{
-            'is-invalid':
-              updateProfileForm.get('firstName')?.invalid &&
-              updateProfileForm.get('firstName')?.touched
-          }"
-        />
-      </div>
-
-      <div
-        class="error-message"
-        *ngIf="
-          updateProfileForm.get('firstName')?.invalid &&
-          updateProfileForm.get('firstName')?.touched
-        "
-      >
-        <small *ngIf="updateProfileForm.get('firstName')?.errors?.['required']">
-          First Name is required.
-        </small>
-        <small
-          *ngIf="updateProfileForm.get('firstName')?.errors?.['minlength']"
-        >
-          Must be at least 3 characters.
-        </small>
-      </div>
-    </div>
-    <div class="form-group">
-      <div class="data">
-        <label for="lastName">Last Name:</label>
-        <input
-          type="text"
-          id="lastName"
-          formControlName="lastName"
-          [ngClass]="{
-            'is-invalid':
-              updateProfileForm.get('lastName')?.invalid &&
-              updateProfileForm.get('lastName')?.touched
-          }"
-        />
-      </div>
-
-      <div
-        class="error-message"
-        *ngIf="
-          updateProfileForm.get('lastName')?.invalid &&
-          updateProfileForm.get('lastName')?.touched
-        "
-      >
-        <small *ngIf="updateProfileForm.get('lastName')?.errors?.['required']">
-          Last Name is required.
-        </small>
-        <small *ngIf="updateProfileForm.get('lastName')?.errors?.['minlength']">
-          Must be at least 3 characters.
-        </small>
-      </div>
-    </div>
-    <div class="profile-buttons">
-      <button
-        type="submit"
-        class="save-btn"
-        [disabled]="updateProfileForm.invalid"
-      >
-        Save
-      </button>
-      <button type="button" (click)="cancelEditForm()" class="cancel-btn">
-        Cancel
-      </button>
-    </div>
-  </form>
   <div
     *ngIf="posts.length > 0 || isPostsLoading; else noPosts"
     class="posts-grid"
@@ -116,6 +35,7 @@
       <p class="post-content">{{ post.content }}</p>
       <p class="post-date">
         Created: {{ post.createdDate | date : "medium" }}
+        <br />
         <span *ngIf="post.modifiedDate">
           | Modified: {{ post.modifiedDate | date : "medium" }}
         </span>
