add loading indicators to login, confirm email, registration components; update header for admin role display

--- a/src/app/components/confirm-email/confirm-email.component.html
+++ b/src/app/components/confirm-email/confirm-email.component.html
@@ -25,9 +25,11 @@
     </button>
 
     <p *ngIf="showResendForm" class="resend">
-      <a (click)="onResendRequest()">
-        Resend Confirmation Email
-      </a>
+      <a (click)="onResendRequest()"> Resend Confirmation Email </a>
     </p>
   </form>
+</div>
+<div *ngIf="isLoading" class="spinner-overlay">
+  <div class="spinner"></div>
+  <p>Loading...</p>
 </div>
