--- a/src/app/components/account-settings/account-settings.component.scss
+++ b/src/app/components/account-settings/account-settings.component.scss
@@ -100,6 +100,48 @@ $font-family: "Arial", sans-serif;
   }
 }
 
+.update-form {
+  margin-top: 30px;
+  .form-group {
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    .data {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      margin-bottom: 15px;
+
+      label {
+        font-size: 16px;
+        font-weight: bold;
+        color: $dark-gray;
+        width: 30%;
+      }
+
+      input {
+        width: 65%;
+        padding: 12px;
+        margin-top: 5px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        flex-grow: 1;
+
+        &.is-invalid {
+          border-color: $danger-color;
+        }
+      }
+    }
+
+    .error-message {
+      color: $danger-color;
+      font-size: 12px;
+    }
+  }
+}
+
 .change-password-form {
   margin-top: 30px;
   .form-group {
@@ -165,13 +207,14 @@ $font-family: "Arial", sans-serif;
 .save-btn {
   background-color: $primary-color;
 
-  &:disabled {
-    background-color: #6c757d;
-    cursor: not-allowed;
-  }
-
   &:hover {
     background-color: $primary-color;
+  }
+
+  &:disabled {
+    background-color: #6c757d;
+    transform: translateY(0);
+    cursor: not-allowed;
   }
 }
 
