add dashboard component and update routing; modify user search.

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -18,7 +18,7 @@
         >
       </li>
       <li (click)="isMenuOpen = false" *ngIf="userRole == 'admin'">
-        <a routerLink="/"><i class="fa fa-user-shield"></i> Admin</a>
+        <a routerLink="/dashboard"><i class="fa fa-user-shield"></i> Admin</a>
       </li>
       <li (click)="isMenuOpen = false; logout()">
         <a><i class="fa fa-sign-out"></i> Logout</a>
