update dashboard component and add other sub components, complete the main view of the dashboard, add the required admin-service methods, update the token interceptor

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-<app-header></app-header>
-<main>
-  <router-outlet></router-outlet>
-</main>
+<header>
+  <app-header></app-header>
+</header>
+<div class="content">
+  <main>
+    <router-outlet></router-outlet>
+  </main>
+</div>
