--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,6 @@
-<p>dashboard works!</p>
+<div class="dashboard-layout">
+  <app-sidebar></app-sidebar>
+  <div class="content-area">
+    <router-outlet></router-outlet>
+  </div>
+</div>
